Removing stray apostrophe

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                 <div class='entry-wrapper'>
                     <div class='entry-title'>Software Engineer, Etsy Inc.</div>
-                    <div class='entry-date'>October 2013 - October 2015'</div>
+                    <div class='entry-date'>October 2013 - October 2015</div>
                     <div class='entry-text'>
                     </div>
                 </div>
