Add some details to etsy work

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class='entry-text'>
                         <ul class='plain-list'>
                             <li>
-                                <i>Javascript, Java, Python, HTML, PHP, SQL,</i>
-                                JQuery, AJAX, CSS, SASS, Unix, Vim, Git, bash,
+                                <i>Javascript, Java, Python, HTML, PHP, SQL, Ruby</i>
+                                JQuery, AJAX, CSS, SASS, Unix, Vim, Git, bash, Rails, React
                                 <i>ProTools, and Ableton Live.</i>
                             <li>
                         </ul>
@@ -43,7 +43,7 @@
                     <div class='entry-title'>Basic Proficiency with</div>
                     <div class='entry-text'>
                         <ul class='plain-list'>
-                            <li>C++, Node.js, Django, Android, Express, AWS, CoffeeScript, WordPress, Regular Expressions, the Facebook API, Final Cut Pro, Logic Pro, Soldering, and Max/MSP.</li>
+                            <li>C++, Node.js, Django, AWS, CoffeeScript, WordPress, Regular Expressions, the Facebook API, Final Cut Pro, Logic Pro, Soldering, and Max/MSP.</li>
                         </ul>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                     <div class='entry-text'>
                         <ul class='plain-list'>
                             <li>
-                                Scala, Scalding, Hadoop
+                                Scala, Scalding, Hadoop, and Android Devkit.
                             </li>
                         </ul>
                     </div>
@@ -67,6 +67,13 @@
                     <div class='entry-title'>Software Engineer, Etsy Inc.</div>
                     <div class='entry-date'>October 2013 - October 2015</div>
                     <div class='entry-text'>
+                        <ul class='plain-list'>
+                            <li>Worked on a new system for capturing, storing, and displaying tracking updates for International Shipping.</li>
+                            <li>Ran large database migrations to asynchronously fix and reformat our shipping data.</li>
+                            <li>Rebuilt the server-side logic for managing shipping preferences in preparation for Etsy's shipping calculator.</li>
+                            <li>Built the front-end of shipping and shop management pages using Marionette.js.</li>
+                            <li>Wrote hadoop jobs to analyze the effectiveness of Etsy's shipping notification emails.</li>
+                        </ul>
                     </div>
                 </div>
 
