--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class='entry-text'>
                         <ul class='plain-list'>
                             <li>
-                                <i>Javascript, Java, Python, HTML, PHP, SQL, Ruby</i>
-                                JQuery, AJAX, CSS, SASS, Unix, Vim, Git, bash, Rails, React
+                                <i>Javascript, Java, Python, HTML, PHP, SQL, Ruby,</i>
+                                JQuery, AJAX, CSS, SASS, Unix, Vim, Git, bash, Rails, React,
                                 <i>ProTools, and Ableton Live.</i>
                             <li>
                         </ul>
@@ -62,6 +62,13 @@
 
             <div class='section-wrapper'>
                 <h2>Work Experience</h2>
+
+                <div class='entry-wrapper'>
+                    <div class='entry-title'>Guitarist, Lawrence</div>
+                    <div class='entry-date'>October 2015 - Present</div>
+                    <div class='entry-text'>
+                    </div>
+                </div>
 
                 <div class='entry-wrapper'>
                     <div class='entry-title'>Software Engineer, Etsy Inc.</div>
