Add self employed software engineer

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
                 </div>
 
                 <div class='entry-wrapper'>
+                    <div class='entry-title'>Software Engineer, Self Employed.</div>
+                    <div class='entry-date'>February 2016 - Present</div>
+                    <div class='entry-text'>
+                        <ul class='plain-list'>
+                            <li>Worked with a small team of engineers to rebuild the internal website for an insurance company.</li>
+                            <li>Built a Rails API for managing insurance application data.</li>
+                            <li>Used React and Redux to build a single page web app for managing and displaying insurance information.</li>
+                            <li>Engineered complex user flows for both the business and customer perspectives.</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class='entry-wrapper'>
                     <div class='entry-title'>Software Engineer, Etsy Inc.</div>
                     <div class='entry-date'>October 2013 - October 2015</div>
                     <div class='entry-text'>
