--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
 
@@ -267,6 +267,9 @@
           <div class='entry-text'>
           </div>
         </div>
+
+      </div>
+    </div>
 
   </body>
 
