fix some closures

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jonathan Koh - Resume</title>
 
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <link rel="stylesheet" type='text/css' href="./resume.css" />
 
@@ -177,6 +177,7 @@
             </ul>
           </div>
         </div>
+      </div>
 
       <div class='section-wrapper'>
         <h2>Education</h2>
@@ -207,6 +208,7 @@
             </ul>
           </div>
         </div>
+      </div>
 
       <div class='section-wrapper'>
         <h2>Hobbies</h2>
