--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+    <meta name="viewport" content="initial-scale=1.0 maximum-scale=2.0 minimum-scale=1.0 user-scalable=yes" />
     <link rel="stylesheet" type='text/css' href="./resume.css" />
 
   </head>
@@ -63,16 +64,15 @@
         <h2>Work Experience</h2>
 
         <div class='entry-wrapper'>
-          <div class='entry-title'>Guitarist, Producer, Engineer, Lawrence</div>
+          <div class='entry-title'>Guitarist/Producer/Engineer, Lawrence</div>
           <div class='entry-date'>October 2015 - Present</div>
           <div class='entry-text'>
             <ul class='plain-list'>
               <li>Co-produced and engineered two studio records.</li>
-              <li>Plays guitar does monitor/RF engineering for our live shows.</li>
-              <li>Manages website and online store (SquareSpace with ShipStation integration).</li>
-              <li>Designed and implemented a web-app that allows our fans to hear the isolated pieces of our latest album (<a href="https://stems.lawrencetheband.com">stems.lawrencetheband.com</a>).</li>
+              <li>Manages the band website and online store.</li>
+              <li>Designed and implemented a web-app that allows fans to hear the isolated pieces of our latest album (<a href="https://stems.lawrencetheband.com">stems.lawrencetheband.com</a>).</li>
+              <li>Built a custom Tour Management app using a MySQL/Rails server with a React front-end (<a href="https://backline.me">Backline.me</a>).</li>
               <li>Engineered a markov chain based machine learning chat bot that analyzes our internal band group messages and generates responses.</li>
-              <li>Built a custom Tour Management app for the band using a MySQL/Rails server with a React front-end, that we are slowly making available to other bands and venues (<a href="https://backline.me">Backline.me</a>).</li>
             </ul>
           </div>
         </div>
