--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
           <div class='entry-text'>
             <ul class='plain-list'>
               <li>
-                <i>Javascript, Java, Python, HTML, PHP, SQL, Ruby,</i>
-                JQuery, CSS, SASS, Unix, Vim, Git, bash, Rails, React, Redux.
+                Javascript, Java, Python, HTML, PHP, SQL, Ruby, JQuery, CSS, SASS, Unix, Vim, Git, bash, Rails, React, Redux.
               <li>
             </ul>
           </div>
@@ -70,8 +69,8 @@
             <ul class='plain-list'>
               <li>Co-produced and engineered two studio records.</li>
               <li>Manages the band website and online store.</li>
-              <li>Designed and implemented a web-app that allows fans to hear the isolated pieces of our latest album (<a href="https://stems.lawrencetheband.com">stems.lawrencetheband.com</a>).</li>
-              <li>Built a custom Tour Management app using a MySQL/Rails server with a React front-end (<a href="https://backline.me">Backline.me</a>).</li>
+              <li>Designed and implemented a web-app that allows fans to hear the isolated pieces of our music (<a href="https://splitter.fm/lawrencetheband">https://splitter.fm/lawrencetheband</a>).</li>
+              <li>Built a custom Tour Management app using a MySQL/Rails server with a React front-end (<a href="https://backline.me">https://backline.me</a>).</li>
               <li>Engineered a markov chain based machine learning chat bot that analyzes our internal band group messages and generates responses.</li>
             </ul>
           </div>
